--- a/static/css/profile-d.css
+++ b/static/css/profile-d.css
@@ -21,6 +21,10 @@ body {
   background-color: #343a40 !important;
   color: #f8f9fa;
 }
+.bg-inner {
+  background-color: #394046 !important;
+  color: #f8f9fa;
+}
 .nav-tabs .nav-link:hover {
     border-color: rgba(0,0,0,.125) !important;
 }
@@ -36,4 +40,17 @@ body {
 .bg-main-tab:hover {
   border-color: rgba(0,0,0,.125) !important;
   background-color: #394046 !important;
+}
+
+.list-group-item {
+  /*Corrige BS*/
+  border: none;
+  border-top: 1px solid rgba(0, 0, 0, .125);
+}
+
+.list-group-item:focus,
+.list-group-item:hover {
+  /*Corrige BS*/
+  z-index: 0;
+  text-decoration: none;
 }
