--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -9,7 +9,7 @@
 #responses-section {
 	display: none;
 }
-#tabs.dark {
+#tabs {
     border-bottom: none;
 }
 #tabs .nav-item .nav-link.bg-dark {
@@ -22,4 +22,17 @@
 }
 .nav-tabs .nav-link:hover {
     border-color: rgba(255,255,255,.125) !important;
+}
+
+.list-group-item {
+  /*Corrige BS*/
+  border: none;
+  border-top: 1px solid rgba(0, 0, 0, .125);
+}
+
+.list-group-item:focus,
+.list-group-item:hover {
+  /*Corrige BS*/
+  z-index: 0;
+  text-decoration: none;
 }
